--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -5,11 +5,15 @@ h4 {
 }
 
 .md-header {
-  background-color: cadetblue;
+  background-color: #b88917;
+}
+
+.md-tabs {
+  background-color: #b88917;
 }
 
 @media (max-width: 768px) {
   .md-nav--primary .md-nav__title[for="__drawer"] {
-    background-color: cadetblue;
+    background-color: #b88917;
   }
 }
