--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -1,6 +1,6 @@
 <style>
   footer.custom-footer {
-    background-color: cadetblue;
+    background-color: #b88917;
     color: #f1f1f1;
     padding: 20px 20px;
     text-align: center;
@@ -26,7 +26,7 @@
     height: 2px;
     bottom: -5px;
     left: 0;
-    background-color: #f9a826;
+    background-color: rgb(144, 203, 206);
     transition: width 0.3s ease;
   }
 
@@ -44,7 +44,7 @@
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #f9a826;
+    background-color: rgb(144, 203, 206);
     color: #1e1e2f;
     text-decoration: none;
     border-radius: 8px;
@@ -55,7 +55,7 @@
   }
 
   .footer-link:hover {
-    background-color: #ffc04d;
+    background-color: rgb(144, 203, 206);
     transform: translateY(-3px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
   }
@@ -72,22 +72,12 @@
   }
 
   .footer-copy {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     color: #ffffff;
   }
 
-  code.package-name {
-    font-family: "Courier New", Courier, monospace;
-    background-color: #dcdcdc;
-    padding: 1px;
-    color: #1e1e2f;
-    border-radius: 6px;
-    white-space: nowrap;
-    font-size: 0.9rem;
-  }
-
   .course-name {
-    background-color: #f9a826;
+    background-color: rgb(144, 203, 206);
     color: #1e1e2f;
     padding: 2px;
   }
@@ -96,7 +86,7 @@
 <footer class="custom-footer">
   <div class="footer-container">
     <p class="footer-description">
-      <code class="package-name">dayplot</code> is proudly supported by
+      <code>dayplot</code> is proudly supported by
       <span class="course-name">Matplotlib Journey</span> — an interactive,
       beginner-friendly course to master <em>matplotlib</em> from the ground up.
       Learn to visualize your data beautifully and effectively.
